Revision history for Perl extension Devel-Mockify

{{$NEXT}}

0.10.0 2017-02-22T19:44:56Z
    - fix documentation and versionsnumber issues

0.9.4 2017-02-15T19:43:47Z
    - new chained mocksetup approach

0.9.3 2017-01-14T13:35:54Z
    - revison number
    - add meatcpan badge
    - fix kwalitee warnings

0.9 2017-01-06T14:07:50Z
    - initial version
    - initial release on CPAN
